--- a/src/main/resources/templates/admin/type-input.html
+++ b/src/main/resources/templates/admin/type-input.html
@@ -43,8 +43,8 @@
     <div class="ui attached pointing menu">
         <div class="ui container">
             <div class="right menu">
-                <a href="#" class="item active teal">发布</a>
-                <a href="#" class="item ">列表</a>
+                <a href="#" th:href="@{/admin/types/input}" class="active item">新增</a>
+                <a href="#" th:href="@{/admin/types}" class="teal  item">列表</a>
             </div>
         </div>
     </div>
@@ -56,14 +56,19 @@
     <!--中间内容-->
     <div class="m-padded-tb-big m-container-small">
        <div class="ui container">
-           <form action="#" th:action="@{/admin/types}" method="post" class="ui form">
-
+           <form action="#" th:action="*{id}==null ? @{/admin/types} : @{/admin/types/{id}(id=*{id})} "th:object="${type}" method="post" class="ui form">
+               <input type="hidden" name="id" th:value="*{id}">
                <div class="required field">
                    <div class="ui left labeled input">
                        <label class="ui teal basic label">名称</label>
-                       <input type="text" name="name" placeholder="分类名称">
+                       <input type="text" name="name" placeholder="分类名称" th:value="*{name}">
                    </div>
-
+               </div>
+               <div class="ui error message"></div>
+               <div class="ui negative message" th:if="${#fields.hasErrors('name')}"  >
+                   <i class="close icon"></i>
+                   <div class="header">验证失败</div>
+                   <p th:errors="*{name}">提交信息不符合规则</p>
                </div>
 
                <div class="ui right aligned container">
