--- a/src/main/resources/templates/admin/blogs.html
+++ b/src/main/resources/templates/admin/blogs.html
@@ -49,74 +49,91 @@
 
 
     <!--中间内容-->
-    <div class="m-padded-tb-big m-container-small">
-       <div class="ui container">
-           <form action="#" method="post" class="ui segment form">
-               <div class="inline fields">
-                   <div class="field">
-                       <input type="text" name="title" placeholder="标题">
-                   </div>
-                   <div class="field">
-                       <div class="ui selection dropdown">
-                           <input type="hidden" name="type">
-                           <i class="dropdown icon"></i>
-                           <div class="default text">分类</div>
-                           <div class="menu">
-                               <div class="item" data-value="1">错误日志</div>
-                               <div class="item" data-value="2">开发者手册</div>
-                           </div>
-                       </div>
-                   </div>
-                   <div class="field">
-                       <div class="ui checkbox">
-                           <input type="checkbox" name="recommend" id="recommend">
-                           <label for="recommend">推荐</label>
-                       </div>
-                   </div>
-                   <div class="field">
-                       <button class="ui teal basic button mini"><i class="search icon"></i>搜索</button>
-                   </div>
+    <div  class="m-container-small m-padded-tb-big">
+        <div class="ui container">
+            <div  class="ui secondary segment form">
+                <input type="hidden" name="page" >
+                <div class="inline fields">
+                    <div class="field">
+                        <input type="text" name="title" placeholder="标题">
+                    </div>
+                    <div class="field">
+                        <div class="ui labeled action input">
+                            <div class="ui type selection dropdown">
+                                <input type="hidden" name="typeId">
+                                <i class="dropdown icon"></i>
+                                <div class="default text">分类</div>
+                                <div class="menu">
+                                    <div th:each="type : ${types}" class="item" data-value="1" th:data-value="${type.id}" th:text="${type.name}">错误日志</div>
+                                    <!--/*-->
+                                    <div class="item" data-value="2">开发者手册</div>
+                                    <!--*/-->
+                                </div>
+                            </div>
+                            <button id="clear-btn" class="ui compact button">清除</button>
+                        </div>
 
-               </div>
-           </form>
+                    </div>
+                    <div class="field">
+                        <div class="ui checkbox">
+                            <input type="checkbox" id="recommend" name="recommend">
+                            <label for="recommend">推荐</label>
+                        </div>
+                    </div>
+                    <div class="field">
+                        <button  type="button" id="search-btn" class="ui mini teal basic button"><i class="search icon"></i>搜索</button>
+                    </div>
+                </div>
+            </div>
+            <div id="table-container">
+                <table th:fragment="blogList" class="ui compact teal table">
+                    <thead>
+                    <tr>
+                        <th></th>
+                        <th>标题</th>
+                        <th>类型</th>
+                        <th>推荐</th>
+                        <th>状态</th>
+                        <th>更新时间</th>
+                        <th>操作</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="blog,iterStat : ${page.content}">
+                        <td th:text="${iterStat.count}">1</td>
+                        <td th:text="${blog.title}">刻意练习清单</td>
+                        <td th:text="${blog.type.name}">认知升级</td>
+                        <td th:text="${blog.recommend} ? '是':'否'">是</td>
+                        <td th:text="${blog.published} ? '发布':'草稿'">草稿</td>
+                        <td th:text="${blog.updateTime}">2020-10-26 09:45</td>
+                        <td>
+                            <a href="#" th:href="@{/admin/blogs/{id}/input(id=${blog.id})}" class="ui mini teal basic button">编辑</a>
+                            <a href="#" th:href="@{/admin/blogs/{id}/delete(id=${blog.id})}" class="ui mini red basic button">删除</a>
+                        </td>
+                    </tr>
+                    </tbody>
+                    <tfoot>
+                    <tr>
+                        <th colspan="7">
+                            <div class="ui mini pagination menu" th:if="${page.totalPages}>1" >
+                                <a onclick="page(this)" th:attr="data-page=${page.number}-1" class="item" th:unless="${page.first}">上一页</a>
+                                <a onclick="page(this)" th:attr="data-page=${page.number}+1" class=" item" th:unless="${page.last}">下一页</a>
+                            </div>
+                            <a href="#" th:href="@{/admin/blogs/input}" class="ui mini right floated teal basic button">新增</a>
+                        </th>
+                    </tr>
+                    </tfoot>
+                </table>
 
-           <table class="ui celled table">
-               <thead>
-                 <tr>
-                     <th></th>
-                     <th>标题</th>
-                     <th>类型</th>
-                     <th>推荐</th>
-                     <th>更新时间</th>
-                     <th>操作</th>
-                  </tr>
-               </thead>
-               <tbody>
-                 <tr>
-                     <td>1</td>
-                     <td>文章的标题</td>
-                     <td>文章的类型</td>
-                     <td>是</td>
-                     <td>2020-10-27 15:19</td>
-                     <td>
-                         <a href="#" class="ui mini basic teal button">编辑</a>
-                         <a href="#" class="ui mini basic red button">删除</a>
-                     </td>
-                 </tr>
-               </tbody>
-               <tfoot>
-               <tr>
-                   <th colspan="6">
-                       <div class="ui pagination menu">
-                           <a class="item">上一页</a>
-                           <a class="item">下一页</a>
-                       </div>
-                       <a href="#" class="ui right floated teal  basic button">新增</a>
-                   </th>
-               </tr>
-               </tfoot>
-           </table>
-       </div>
+                <div class="ui success message" th:unless="${#strings.isEmpty(message)}">
+                    <i class="close icon"></i>
+                    <div class="header">提示：</div>
+                    <p th:text="${message}">恭喜，操作成功！</p>
+                </div>
+
+            </div>
+
+        </div>
     </div>
     <br>
     <br>
@@ -165,6 +182,39 @@
     $('.ui.dropdown').dropdown({
         on:'hover',
     });
+    //消息提示关闭初始化
+    $('.message .close')
+        .on('click', function () {
+            $(this)
+                .closest('.message')
+                .transition('fade');
+        });
+
+    $('#clear-btn')
+        .on('click', function() {
+            $('.ui.type.dropdown')
+                .dropdown('clear')
+            ;
+        })
+    ;
+
+    function page(obj) {
+        $("[name='page']").val($(obj).data("page"));
+        loaddata();
+    }
+
+    $("#search-btn").click(function () {
+        $("[name='page']").val(0);
+        loaddata();
+    });
+    function loaddata() {
+        $("#table-container").load(/*[[@{/admin/blogs/search}]]*/"/admin/blogs/search",{
+            title : $("[name='title']").val(),
+            typeId : $("[name='typeId']").val(),
+            recommend : $("[name='recommend']").prop('checked'),
+            page : $("[name='page']").val()
+        });
+    }
 </script>
 </body>
 </html>
