--- a/src/main/resources/templates/admin/_fragments.html
+++ b/src/main/resources/templates/admin/_fragments.html
@@ -22,11 +22,11 @@
       <a href="#" th:href="@{/admin/blogs}" class="m-item item m-mobile-hide"><i class="home icon"></i>博客</a>
       <a href="#" th:href="@{/admin/types}" class="m-item item m-mobile-hide"><i class="idea icon"></i>分类</a>
       <a href="#" th:href="@{/admin/tags}"  class="m-item item m-mobile-hide"><i class="tags icon"></i>标签</a>
-      <div class="right m-item item m-mobile-hide menu">
-        <div class="ui dropdown item">
+      <div class="right m-item m-mobile-hide menu">
+        <div class="ui dropdown  item">
           <div class="text">
-            <img class="ui avatar image" src="https://picsum.photos/id/1006/100/100">
-            Zhang Hao
+            <img class="ui avatar image" th:src="@{${session.user.avatar}}">
+            <span th:text="${session.user.nickname}">ZhangHao</span>
           </div>
           <i class="dropdown icon"></i>
           <div class="menu">
@@ -34,7 +34,6 @@
           </div>
         </div>
       </div>
-    </div>
   </div>
   <a href="#" class="ui menu toggle black icon button m-right-top m-mobile-show">
     <i class="sidebar icon"></i>
