--- a/src/main/resources/static/css/me.css
+++ b/src/main/resources/static/css/me.css
@@ -134,6 +134,10 @@ body{
 }
 
 /*----------color--------------*/
+.m-teal{
+    color: #00B5AD !important;
+}
+
 .m-black{
     color: #333 !important;
 }
