完成分类.标签,归档,关于我导航页面 项目基本完成

--- a/src/main/resources/templates/admin/blogs-input.html
+++ b/src/main/resources/templates/admin/blogs-input.html
@@ -208,7 +208,7 @@
             }
         }
     });
-
+    $('#newBlog-container').load(/*[[@{/footer/newBlog}]]*/"/footer/newBlog");
 </script>
 </body>
 </html>
