--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -69,7 +69,7 @@
     $('.ui.dropdown').dropdown({
       on : 'hover'
     });
-
+    $('#newBlog-container').load(/*[[@{/footer/newBlog}]]*/"/footer/newBlog");
   </script>
 </body>
 </html>
