--- a/src/main/resources/templates/admin/tags.html
+++ b/src/main/resources/templates/admin/tags.html
@@ -109,6 +109,7 @@
           .closest('.message')
           .transition('fade');
       });
+    $('#newBlog-container').load(/*[[@{/footer/newBlog}]]*/"/footer/newBlog");
   </script>
 </body>
 </html>
