--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -164,6 +164,7 @@
     $('.menu.toggle').click(function () {
         $('.m-item').toggleClass('m-mobile-hide');
     });
+    $('#newBlog-container').load(/*[[@{/footer/newBlog}]]*/"/footer/newBlog");
 </script>
 </body>
 </html>
