--- a/src/main/resources/templates/admin/tags-input.html
+++ b/src/main/resources/templates/admin/tags-input.html
@@ -90,7 +90,7 @@
         }
       }
     });
-
+    $('#newBlog-container').load(/*[[@{/footer/newBlog}]]*/"/footer/newBlog");
   </script>
 </body>
 </html>
