--- a/src/main/resources/templates/admin/type-input.html
+++ b/src/main/resources/templates/admin/type-input.html
@@ -144,7 +144,7 @@
             }
         }
     });
-
+    $('#newBlog-container').load(/*[[@{/footer/newBlog}]]*/"/footer/newBlog");
 </script>
 </body>
 </html>
