--- a/src/main/resources/templates/admin/types.html
+++ b/src/main/resources/templates/admin/types.html
@@ -144,6 +144,7 @@
                 .closest('.message')
                 .transition('fade');
         });
+    $('#newBlog-container').load(/*[[@{/footer/newBlog}]]*/"/footer/newBlog");
 </script>
 </body>
 </html>
