--- a/src/main/resources/templates/archives.html
+++ b/src/main/resources/templates/archives.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head th:replace="_fragments :: head(~{::title})">
-    <meta charset="UTF-8" >
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>归档</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -10,121 +10,54 @@
 </head>
 <body>
 
-    <!--导航-->
-    <nav th:replace="_fragments :: menu(4)"></nav>
-    <!--中间内容-->
-    <div class="m-padded-tb-big m-container-small">
-       <div class="ui container">
-           <!-- header-->
-           <div class="ui top attached segment padded">
-               <div class="ui middle aligned two column grid">
-                   <div class="column">
-                       <h3 class="ui teal header">归档</h3>
-                   </div>
-                   <div class="column right aligned">
-                       共 <h2 class="ui orange header m-inline-block m-text-thin"> 14 </h2> 篇博客
-                   </div>
-               </div>
-           </div>
+<!--导航-->
+<nav th:replace="_fragments :: menu(4)"></nav>
+<!--中间内容-->
+<div class="m-container-small m-padded-tb-big">
+    <div class="ui container">
+        <!--header-->
+        <div class="ui top attached padded segment">
+            <div class="ui middle aligned two column grid">
+                <div class="column">
+                    <h3 class="ui teal header">归档</h3>
+                </div>
+                <div class="right aligned column">
+                    共 <h2 class="ui orange header m-inline-block m-text-thin" th:text="${blogCount}"> 114 </h2> 篇博客
+                </div>
+            </div>
+        </div>
 
-           <h2 class="ui center aligned header">2020</h2>
-           <div class="ui fluid vertical menu">
+        <th:block th:each="item : ${archiveMap}">
+            <h3 class="ui center aligned header" th:text="${item.key}">2020</h3>
+            <div class="ui fluid vertical menu">
+                <a href="#" th:href="@{/blog/{id}(id=${blog.id})}" target="_blank" class="item"
+                   th:each="blog : ${item.value}">
+                      <span>
+                        <i class="teal circle icon"></i><span th:text="${blog.title}">关于刻意练习的清单</span>
+                        <div class="ui teal basic left pointing label m-padded-mini "
+                             th:text="${#dates.format(blog.updateTime,'MMMdd')}">9月03</div>
+                      </span>
+                    <div class="ui orange basic left pointing label m-padded-mini " th:text="${blog.flag}">原创</div>
+                </a>
 
-               <a href="#" target="_blank" class="item">
-                   <span>
-                       <i class="icon circle teal"></i>我是一个标题~~~~~~123
-                       <div class="ui teal basic left pointing label">10月26日</div>
-                   </span>
-                   <div class="ui orange basic left pointing label">原创</div>
-               </a>
-               <a href="#" target="_blank" class="item">
-                   <span>
-                       <i class="icon circle teal"></i>我是一个标题~~~~~~123
-                       <div class="ui teal basic left pointing label">10月26日</div>
-                   </span>
-                   <div class="ui orange basic left pointing label">原创</div>
-               </a>
-               <a href="#" target="_blank" class="item">
-                   <span>
-                       <i class="icon circle teal"></i>我是一个标题~~~~~~123
-                       <div class="ui teal basic left pointing label">10月26日</div>
-                   </span>
-                   <div class="ui orange basic left pointing label">原创</div>
-               </a>
-               <a href="#" target="_blank" class="item">
-                   <span>
-                       <i class="icon circle teal"></i>我是一个标题~~~~~~123
-                       <div class="ui teal basic left pointing label">10月26日</div>
-                   </span>
-                   <div class="ui orange basic left pointing label">原创</div>
-               </a>
-               <a href="#" target="_blank" class="item">
-                   <span>
-                       <i class="icon circle teal"></i>我是一个标题~~~~~~123
-                       <div class="ui teal basic left pointing label">10月26日</div>
-                   </span>
-                   <div class="ui orange basic left pointing label">原创</div>
-               </a>
+            </div>
+        </th:block>
 
-           </div>
-
-           <h2 class="ui center aligned header">2019</h2>
-           <div class="ui fluid vertical menu">
-
-               <a href="#" target="_blank" class="item">
-                   <span>
-                       <i class="icon circle teal"></i>我是一个标题~~~~~~123
-                       <div class="ui teal basic left pointing label">10月26日</div>
-                   </span>
-                   <div class="ui orange basic left pointing label">原创</div>
-               </a>
-               <a href="#" target="_blank" class="item">
-                   <span>
-                       <i class="icon circle teal"></i>我是一个标题~~~~~~123
-                       <div class="ui teal basic left pointing label">10月26日</div>
-                   </span>
-                   <div class="ui orange basic left pointing label">原创</div>
-               </a>
-               <a href="#" target="_blank" class="item">
-                   <span>
-                       <i class="icon circle teal"></i>我是一个标题~~~~~~123
-                       <div class="ui teal basic left pointing label">10月26日</div>
-                   </span>
-                   <div class="ui orange basic left pointing label">原创</div>
-               </a>
-               <a href="#" target="_blank" class="item">
-                   <span>
-                       <i class="icon circle teal"></i>我是一个标题~~~~~~123
-                       <div class="ui teal basic left pointing label">10月26日</div>
-                   </span>
-                   <div class="ui orange basic left pointing label">原创</div>
-               </a>
-               <a href="#" target="_blank" class="item">
-                   <span>
-                       <i class="icon circle teal"></i>我是一个标题~~~~~~123
-                       <div class="ui teal basic left pointing label">10月26日</div>
-                   </span>
-                   <div class="ui orange basic left pointing label">原创</div>
-               </a>
-
-           </div>
-
-       </div>
     </div>
-    <br>
-    <br>
-    <!--底部footer-->
-    <footer th:replace="_fragments :: footer" class="ui inverted vertical segment m-padded-tb-massive">
+</div>
 
-    </footer>
+<br>
+<br>
+<!--底部footer-->
+<footer th:replace="_fragments :: footer"></footer>
 
-    <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+<script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
 <script>
     $('.menu.toggle').click(function () {
         $('.m-item').toggleClass('m-mobile-hide');
     });
-
+    $('#newBlog-container').load(/*[[@{/footer/newBlog}]]*/"/footer/newBlog");
 </script>
 </body>
 </html>
