--- a/src/main/resources/templates/types.html
+++ b/src/main/resources/templates/types.html
@@ -102,7 +102,7 @@
     $('.menu.toggle').click(function () {
         $('.m-item').toggleClass('m-mobile-hide');
     });
-
+    $('#newBlog-container').load(/*[[@{/footer/newBlog}]]*/"/footer/newBlog");
 </script>
 </body>
 </html>
