--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -31,8 +31,8 @@
                         <div class="ui header">关于我</div>
                     </div>
                     <div class="ui attached segment">
-                        <p class="m-text">我是张浩,练习时长两年半的Java后端开发自学者,喜欢唱,跳,rap,计算机~~~~~~~~~~~</p>
-                        <p class="m-text">写这个博客项目是为了毕业设计以及个人开发练习!(前端真的好难写)...</p>
+                        <p class="m-text">我是张浩,喜欢随意写代码,不喜欢实现产品经理的需求</p>
+                        <p class="m-text">写这个博客项目是为了毕业设计以及个人开发练习!</p>
                     </div>
                     <div class="ui attached segment">
                         <div class="ui orange basic left pointing label">编程</div>
